--- a/themes/bootstrap/templates/layout/admin-parts/header.twig
+++ b/themes/bootstrap/templates/layout/admin-parts/header.twig
@@ -9,10 +9,28 @@
             <ul class="nav navbar-nav navbar-left text-center">
                 <li><a href="{{ routeUrl('admin.order') }}">Orders</a></li>
                 <li><a href="{{ routeUrl('admin.user') }}">Customers</a></li>
-                <li><a href="{{ routeUrl('admin.product') }}">Inventory</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Promotions <span class="caret"></span></a>
+                    <a href="#"
+                       class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-haspopup="true"
+                       aria-expanded="false">Catalog <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ routeUrl('admin.product') }}">Products</a></li>
+                        <li><a href="{{ routeUrl('admin.tag') }}">Tags</a></li>
+                        <li><a href="{{ routeUrl('admin.option') }}">Options</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#"
+                       class="dropdown-toggle"
+                       data-toggle="dropdown"
+                       role="button"
+                       aria-haspopup="true"
+                       aria-expanded="false">Promotions <span class="caret"></span>
+                    </a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ routeUrl('admin.coupon') }}">Coupons</a></li>
                         <li><a href="{{ routeUrl('admin.catalog-promotion') }}">Catalog Promotions</a></li>
