Adding sub navigation for admin order.

--- a/themes/bootstrap/templates/admin/order/view.twig
+++ b/themes/bootstrap/templates/admin/order/view.twig
@@ -5,6 +5,9 @@
 
 {% block content %}
     <div class="container">
+
+        {% include 'admin/order/navigation.twig' %}
+
         <div class="row">
             <div class="col-sm-12">
                 <h2>Order Details</h2>
