--- a/themes/bootstrap/templates/admin/order/shipments.twig
+++ b/themes/bootstrap/templates/admin/order/shipments.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="container">
-        {% include 'admin/order/navigation.twig' %}
+        {% include 'admin/order/order-header.twig' %}
 
         <div class="row">
             <div class="col-sm-12">
