--- a/themes/bootstrap/templates/helper/order-item-options.twig
+++ b/themes/bootstrap/templates/helper/order-item-options.twig
@@ -30,7 +30,7 @@
                 {{ orderItemTextOptionValue.textOptionName }}:
             </span>
             <span class="text-muted">
-                {{ orderItemTextOptionValue.textOptionValueName }}
+                {{ orderItemTextOptionValue.textOptionValue }}
             </span>
             <br>
         </small>
