--- a/themes/bootstrap/templates/admin/order/navigation.twig
+++ b/themes/bootstrap/templates/admin/order/navigation.twig
@@ -3,15 +3,20 @@
 {% set navigation = [
     {
         'name': 'View',
-        'url' : routeUrl('admin.order.view', {'orderId': order.id.getHex()}),
+        'url' : routeUrl('admin.order.view', {'orderId': order.id.getHex()})
     },
     {
         'name': 'Shipments <span class="badge">' ~ order.shipments | length ~ '</span>',
-        'url': routeUrl('admin.order.shipments', {'orderId': order.id.getHex()}),
+        'url': routeUrl('admin.order.shipments', {'orderId': order.id.getHex()})
     },
     {
         'name': 'Invoice',
-        'url': routeUrl('admin.order.invoice', {'orderId': order.id.getHex()}),
+        'url': routeUrl('admin.order.invoice', {'orderId': order.id.getHex()})
+    },
+    {
+        'name': 'New Shipment',
+        'url': routeUrl('admin.order.add-shipment', {'orderId': order.id.getHex()}),
+        'onlyWhenActive': true
     }
 ] %}
 
