--- a/themes/bootstrap/templates/admin/order/shipments.twig
+++ b/themes/bootstrap/templates/admin/order/shipments.twig
@@ -9,7 +9,91 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <h2>TODO</h2>
+                {% for shipment in order.shipments %}
+                    <div class="row shipment-row">
+                        <div class="col-sm-12">
+                            <div class="shipment-content">
+                                <h2>Tracking</h2>
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th>Rate</th>
+                                        <th>Carrier/Service</th>
+                                        <th class="text-right">Label</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                        <?php foreach ($shipment->shipmentTrackers as $shipmentTracker) { ?>
+                                            <tr>
+                                                <td>
+                                                    <?php if ($shipmentTracker->shipmentRate->rate->amount === null) { ?>
+                                                        n/a
+                                                    <?php } else { ?>
+                                                        <?=Kommerce::display_price($shipmentTracker->shipmentRate->rate->amount)?>
+                                                    <?php } ?>
+                                                </td>
+                                                <td>
+                                                    <?php if ($shipmentTracker->shipmentRate->carrier !== null) { ?>
+                                                        <?=HTML::chars($shipmentTracker->shipmentRate->carrier)?>
+                                                        <?=HTML::chars($shipmentTracker->shipmentRate->service)?>
+                                                        <br>
+                                                    <?php } elseif ($shipmentTracker->carrier !== null) { ?>
+                                                        <?=HTML::chars($shipmentTracker->carrier->name)?>
+                                                        <br>
+                                                    <?php } ?>
+                                                    <strong>Tracking:</strong> <?=HTML::chars($shipmentTracker->trackingCode)?>
+                                                    <div class="text-muted">
+                                                        <div class="text-muted">
+                                                            <?php if ($shipmentTracker->shipmentRate->deliveryDays !== null) { ?>
+                                                                <strong>Delivery Days:</strong>
+                                                                <?=(int) $shipmentTracker->shipmentRate->deliveryDays?>
+                                                                <br>
+                                                            <?php } ?>
+                                                            <?php if ($shipmentTracker->shipmentRate->deliveryDate !== null) { ?>
+                                                                <strong>Delivery Date:</strong>
+                                                                <?=Kommerce::format_date_time($shipmentTracker->shipmentRate->deliveryDate->getTimestamp())?>
+                                                                <?php if ($shipmentTracker->shipmentRate->isDeliveryDateGuaranteed) { ?>
+                                                                    <span style="color: green">
+                                                                        <strong><i class="fa fa-check"></i> Guaranteed</strong>
+                                                                    </span>
+                                                                <?php } ?>
+                                                                <br>
+                                                            <?php } ?>
+                                                            <strong>Created:</strong>
+                                                            <?=Kommerce::format_date_time($shipmentTracker->created->getTimestamp())?>
+                                                            <br>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td class="text-right">
+                                                    <?php if ($shipmentTracker->shipmentLabel->url === null) { ?>
+                                                        n/a
+                                                    <?php } else { ?>
+                                                        <a href="<?=$shipmentTracker->shipmentLabel->url?>">
+                                                            <img src="<?=$shipmentTracker->shipmentLabel->url?>" style="max-height: 150px" />
+                                                        </a>
+                                                    <?php } ?>
+                                                </td>
+                                            </tr>
+                                        <?php } ?>
+                                    </tbody>
+                                </table>
+                                <h2>Comments</h2>
+                                <?php if (empty($shipment->shipmentComments)) { ?>
+                                    <div class="text-muted">No comments</div>
+                                <?php } else { ?>
+                                    <?php foreach ($shipment->shipmentComments as $shipmentComment) { ?>
+                                        <p>
+                                            <?=HTML::chars($shipmentComment->comment)?>
+                                        </p>
+                                    <?php } ?>
+                                <?php } ?>
+                            </div>
+                        </div>
+                    </div>
+                {% else %}
+                    <div class="text-muted">No shipments</div>
+                {% endfor %}
             </div>
         </div>
     </div>
