--- a/themes/bootstrap/templates/layout/base-admin.twig
+++ b/themes/bootstrap/templates/layout/base-admin.twig
@@ -16,5 +16,6 @@
     </div>
     {% include 'layout/parts/base-modal.twig' %}
     {% include 'layout/parts/footer.twig' %}
+    {% include 'layout/parts/javascript.twig' %}
 </body>
 </html>
