--- a/themes/bootstrap/scss/_main.scss
+++ b/themes/bootstrap/scss/_main.scss
@@ -11,3 +11,8 @@
 @import "search";
 @import "checkout";
 @import "rating_stars";
+
+@import "variables";
+
+@import "bootstrap";
+@import "bootstrap/theme";
