--- a/themes/bootstrap/templates/admin/order/add-shipment-label.twig
+++ b/themes/bootstrap/templates/admin/order/add-shipment-label.twig
@@ -40,7 +40,7 @@
                                 'shipment',
                                 'length',
                                 shipment.length,
-                                'Legth (in)',
+                                'Length (in)',
                                 'col-sm-4',
                                 {
                                     'required': ''
