--- a/themes/bootstrap/templates/layout/base-admin.twig
+++ b/themes/bootstrap/templates/layout/base-admin.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% include 'layout/parts/head.twig' with {
+    {% include 'layout/admin-parts/head.twig' with {
         'pageTitle': block('pageTitle'),
         'pageDescription': block('pageDescription'),
         'pageCanonicalUrl': block('pageCanonicalUrl')
