--- a/themes/bootstrap/templates/admin/order/add-shipment.twig
+++ b/themes/bootstrap/templates/admin/order/add-shipment.twig
@@ -35,6 +35,7 @@
               id="new-shipment">
             {{ form.csrf() }}
             {{ form.hidden('orderId', order.id.getHex()) }}
+
             <div class="row">
                 <div class="col-sm-12">
                     <table class="table">
@@ -78,15 +79,10 @@
             <div class="row">
                 <div class="col-sm-6">
                     <strong>Shipment Comments</strong>
-                    {{ form.textarea(
-                        'comment',
-                        '',
-                        'form-control',
-                        {
-                            'placeholder': 'Enter shipping message to customer',
-                            'rows': 4
-                        }
-                    )}}
+                    <textarea name="comment"
+                              class="form-control"
+                              placeholder="Enter shipping message to customer"
+                              rows="4"></textarea>
                 </div>
                 <div class="col-sm-6">
                     <div class="well">
@@ -96,6 +92,7 @@
                                 class="btn btn-primary">
                             <i class="fa fa-truck"></i> Create Shipping Label
                         </button>
+
                         <button type="submit"
                                 name="action"
                                 value="create-with-tracking-code"
