--- a/themes/bootstrap/templates/macros/paginate.twig
+++ b/themes/bootstrap/templates/macros/paginate.twig
@@ -1,111 +1,85 @@
 {# @var pagination \inklabs\kommerce\EntityDTO\PaginationDTO #}
 
 {% macro detailed(pagination) %}
-    {# First Previous 1 2 ... 12 13 14 [16] 17 18 19 ... 44 45 Next Last #}
-
-    {% set links_around_page = 2 %}
-    {% set links_around_edge = 1 %}
-    {% set total_items = pagination.total %}
-    {% set items_per_page = pagination.maxResults %}
-    {% set current_page = pagination.page %}
-
-    {% set total_items = max(0, total_items) %}
-    {% set items_per_page = max(1, items_per_page) %}
-    {% set total_pages = (total_items / items_per_page) | ceil %}
-    {% set current_page = min(max(1, current_page), max(1, total_pages)) %}
-    {% set current_first_item = min(((current_page - 1) * items_per_page) + 1, total_items) %}
-    {% set current_last_item = min(current_first_item + items_per_page - 1, total_items) %}
-    {% set previous_page = (current_page > 1) ? current_page - 1 : false %}
-    {% set next_page = (current_page < total_pages) ? current_page + 1 : false %}
-    {% set first_page = (current_page == 1) ? false : 1 %}
-    {% set last_page = (current_page >= total_pages) ? false : total_pages %}
-    {% set offset = ((current_page - 1) * items_per_page) %}
-
-    {# Beginning group of pages: $n1...$n2 #}
-    {% set n1 = 1 %}
-    {% set n2 = min(links_around_edge, total_pages) %}
-
-    {# Ending group of pages: $n7...$n8 #}
-    {% set n7 = max(1, total_pages - links_around_edge + 1) %}
-    {% set n8 = total_pages %}
-
-    {# Middle group of pages: $n4...$n5 #}
-    {% set n4 = max(n2 + 1, current_page - links_around_page) %}
-    {% set n5 = min(n7 - 1, current_page + links_around_page) %}
-    {% set use_middle = (n5 >= n4) %}
-
-    {# Point $n3 between $n2 and $n4 #}
-    {% set n3 = ((n2 + n4) / 2) | round(0) %}
-    {% set use_n3 = (use_middle and ((n4 - n2) > 1)) %}
-
-    {# Point $n6 between $n5 and $n7 #}
-    {% set n6 = ((n5 + n7) / 2) | round(0) %}
-    {% set use_n6 = (use_middle and ((n7 - n5) > 1)) %}
-
-    {# <pre>{{ pagination | json_encode(constant('JSON_PRETTY_PRINT')) }}</pre> #}
+    {# Previous 1 2 ... 12 13 14 [16] 17 18 19 ... 44 45 Next #}
 
     <div class="well well-sm pagination-well">
-        <div class="pull-left">
-            Showing {{ current_first_item }} - {{ current_last_item }}
-            of {{ total_items }} Results
-        </div>
-        <ul class="pagination pagination-sm pull-right">
-            {% if previous_page %}
-                <li><a href="?page={{ previous_page }}" rel="prev"><i class="fa fa-chevron-left"></i> Previous</a></li>
-            {% else %}
-                <li class="disabled"><a href="#"><i class="fa fa-chevron-left"></i> Previous</a></li>
-            {% endif %}
+        {% set totalItems = max(0, pagination.total) %}
+        {% if totalItems > 0 %}
+            {% set lastPage = (totalItems / pagination.maxResults) | ceil %}
+        {% endif %}
 
-            {% set links = {} %}
-            {% set ellipsis = '<i class="fa fa-ellipsis-h"></i>' %}
+        {% if lastPage > 1 %}
 
-            {% if links_around_edge > 0 %}
-                {% if n1 <= n2 %}
-                    {% for i in n1..n2 %} {# for ($i = $n1; $i <= $n2; $i++) #}
-                        {% if i == current_page %}
-                            <li class="active"><a href="#">{{ i }}</a></li>
-                        {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
+            {% set extremePagesLimit = 1 %} {# the number of first and last pages to be displayed #}
+            {% set nearbyPagesLimit = 2 %}  {# the number of pages that are displayed around the active page #}
+            {% set paginationPath = '?page=' %}
+            {% set showAlwaysFirstAndLast = true %}
+
+            {% set currentPage = pagination.page %}
+            {% set firstItem = min(((currentPage - 1) * pagination.maxResults) + 1, totalItems) %}
+            {% set lastItem = min(firstItem + pagination.maxResults - 1, totalItems) %}
+
+            <div class="pull-left">
+                Showing {{ firstItem }} - {{ lastItem }}
+                of {{ totalItems }} Results
+            </div>
+
+            <ul class="pagination pagination-sm pull-right">
+                {% if currentPage > 1 %}
+                    <li><a href="{{ paginationPath }}{{ currentPage - 1 }}" rel="prev"><i class="fa fa-chevron-left"></i> Previous</a></li>
+
+                    {% for i in range(1, extremePagesLimit) if ( i < currentPage - nearbyPagesLimit ) %}
+                        <li><a href="{{ paginationPath }}{{ i }}">{{ i }}</a></li>
                     {% endfor %}
-                {% endif %}
-                {% if use_n3 %}
-                    <li><a href="?page={{ n3 }}"><i class="fa fa-ellipsis-h"></i></a></li>
-                {% endif %}
-            {% endif %}
 
-            {% if n4 <= n5 %}
-                {% for i in n4..n5 %}
-                    {% if i == current_page %}
-                        <li class="active"><a href="#">{{ i }}</a></li>
-                    {% else %}
-                        <li><a href="?page={{ i }}">{{ i }}</a></li>
+                    {% if extremePagesLimit + 1 < currentPage - nearbyPagesLimit %}
+                        {% set leftPage = extremePagesLimit %}
+                        {% set rightPage = currentPage - nearbyPagesLimit %}
+                        {% set middlePage = (((rightPage - leftPage) / 2) | ceil) + leftPage %}
+                        <li><a href="{{ paginationPath }}{{ middlePage }}">...</a></li>
                     {% endif %}
-                {% endfor %}
-            {% endif %}
 
-            {% if links_around_edge > 0 %}
-                {% if use_n6 %}
-                    <li><a href="?page={{ n6 }}"><i class="fa fa-ellipsis-h"></i></a></li>
-                {% endif %}
-
-                {% if n7 <= n8 %}
-                    {% for i in n7..n8 %}
-                        {% if i == current_page %}
-                            <li class="active"><a href="#">{{ i }}</a></li>
-                        {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
+                    {% for i in range(currentPage-nearbyPagesLimit, currentPage-1) if ( i > 0 ) %}
+                        <li><a href="{{ paginationPath }}{{ i }}">{{ i }}</a></li>
                     {% endfor %}
+                {% elseif showAlwaysFirstAndLast %}
+                    <li><a href="#">Previous</a></li>
                 {% endif %}
-            {% endif %}
 
-            {% if next_page %}
-                <li><a href="?page={{ next_page }}" rel="next">Next <i class="fa fa-chevron-right"></i></a></li>
-            {% else %}
-                <li class="disabled"><a href="#">Next <i class="fa fa-chevron-right"></i></a></li>
-            {% endif %}
-        </ul>
+                <li class="active"><a href="#">{{ currentPage }}</a></li>
+
+                {% if currentPage < lastPage %}
+                    {% for i in range(currentPage+1, currentPage + nearbyPagesLimit) if ( i <= lastPage ) %}
+                        <li><a href="{{ paginationPath }}{{ i }}">{{ i }}</a></li>
+                    {% endfor %}
+
+                    {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
+                        {% set leftPage = currentPage + nearbyPagesLimit %}
+                        {% set rightPage = lastPage - extremePagesLimit + 1 %}
+                        {% set middlePage = (((rightPage - leftPage) / 2) | ceil) + leftPage %}
+                        <li><a href="{{ paginationPath }}{{ middlePage }}">...</a></li>
+                    {% endif %}
+
+                    {% for i in range(lastPage - extremePagesLimit+1, lastPage) if ( i > currentPage + nearbyPagesLimit ) %}
+                       <li><a href="{{ paginationPath }}{{ i }}">{{ i }}</a></li>
+                    {% endfor %}
+
+                    <li><a href="{{ paginationPath }}{{ currentPage + 1 }}" rel="next">Next <i class="fa fa-chevron-right"></i></a></li>
+                {% elseif showAlwaysFirstAndLast %}
+                    <li><a href="{{ paginationPath }}{{ currentPage + 1 }}">Next</a></li>
+                {% endif %}
+            </ul>
+        {% else %}
+            <div class="pull-left">
+                Showing {{ totalItems }}
+                {% trans %}
+                    result
+                {% plural totalItems %}
+                    results
+                {% endtrans %}
+            </div>
+        {% endif %}
         <div class="clearfix"></div>
     </div>
 {% endmacro %}
