Adding ability to update product in the admin panel.

--- a/themes/bootstrap/templates/admin/product/edit.twig
+++ b/themes/bootstrap/templates/admin/product/edit.twig
@@ -16,6 +16,7 @@
                       role="form">
                     <fieldset>
                         {{ form.csrf() }}
+                        {{ form.hidden('productId', product.id.hex ) }}
                         <div class="well">
                             <h2>Required:</h2>
 
